<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/form_transacao_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorButtonNormal"
            android:hint="@string/valor"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/form_transacao_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorButtonNormal"
            android:focusable="false"
            android:hint="@string/data"
            android:inputType="none"
            android:layout_marginTop="10dp"
            tools:text="11/20/2014" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descricao_hint"
            android:layout_marginTop="10dp"
            android:background="?attr/colorButtonNormal"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>