<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/black"
    tools:background="@color/white"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/receita_nome"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textStart"
                    android:background="?attr/colorButtonNormal"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:hint="@string/nome_receita" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/ingredientes"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lista_ingredientes_listview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:divider="@null"
                    android:dividerHeight="0dp" />

                <Button
                    android:id="@+id/btn_insere_ingrediente"
                    style="@style/ButtonFilledGreen"
                    android:layout_width="match_parent"
                    tools:background="@color/white"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="32dp"
                    android:enabled="true"
                    android:text="@string/inserir_ingrediente"
                    app:layout_constraintTop_toBottomOf="@+id/lista_ingredientes_listview" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:gravity="center"
                android:text="@string/modo_preparo"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/receita_descricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/view_bg_outline_brown"
                    android:gravity="top|start"
                    android:textColor="@color/black"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:minLines="10"
                    android:imeOptions="actionDone"
                    android:scrollbars="vertical" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_salvar_receita"
                style="@style/ButtonFilledGreen"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="32dp"
                android:enabled="true"
                android:text="@string/salvar_receita"
                app:layout_constraintTop_toBottomOf="@+id/salvar_receita" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>