<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <View
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/shape_main"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/app_bar"
        android:layout_alignTop="@+id/app_bar"
        android:layout_alignEnd="@+id/app_bar"
        android:layout_alignBottom="@+id/app_bar"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/viewFinancas"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/app_bar"
        android:layout_marginTop="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:background="@drawable/shape_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/viewFinancas"
        android:layout_alignTop="@+id/viewFinancas"
        android:layout_alignEnd="@+id/viewFinancas"
        android:layout_alignBottom="@+id/viewFinancas"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/financas"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:id="@+id/viewViagens"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignTop="@+id/viewFinancas"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignStart="@+id/viewViagens"
        android:layout_alignEnd="@+id/viewViagens"
        android:layout_alignBottom="@+id/viewViagens"
        android:layout_alignTop="@+id/viewViagens">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viagens"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp" />

    </LinearLayout>

    <View
        android:id="@+id/viewMetas"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/viewFinancas"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignStart="@+id/viewMetas"
        android:layout_alignEnd="@+id/viewMetas"
        android:layout_alignBottom="@+id/viewMetas"
        android:layout_alignTop="@+id/viewMetas">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metas"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp" />

    </LinearLayout>

    <View
        android:id="@+id/viewReceitas"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_content"
        android:layout_below="@+id/viewViagens"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignStart="@+id/viewReceitas"
        android:layout_alignEnd="@+id/viewReceitas"
        android:layout_alignBottom="@+id/viewReceitas"
        android:layout_alignTop="@+id/viewReceitas">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receitas"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp" />

    </LinearLayout>







</RelativeLayout>