<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="45dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:elevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="6dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/biel"
                    android:textColor="@color/biel"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mari"
                    android:textColor="@color/mari"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/resumo_card_saldo_biel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textSize="20sp"
                    android:layout_marginEnd="6dp"
                    android:textColor="@color/biel"
                    tools:text="R$ 1000000,00" />

                <TextView
                    android:id="@+id/resumo_card_mari"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:layout_gravity="end"
                    android:textSize="20sp"
                    android:textColor="@color/mari"
                    tools:text="R$ 10000,00" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="end"
                    android:background="#848484"
                    android:visibility="invisible"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/resumo_card_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/tudo_zerado"
            android:textSize="20sp"
            android:visibility="visible" />
    </LinearLayout>

</androidx.cardview.widget.CardView>