<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_detalhe_viagem"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_arrow_left"
                app:tint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:tint="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/detalhe_receita"
                android:layout_gravity="center"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/ivBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivBack"
                android:textSize="18sp"
                tools:textColor="@color/black"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/local_viagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Viajar para praia" />

        <LinearLayout
            android:id="@+id/ll_filters_viagem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGastosViagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="18sp"
                android:background="@drawable/button_detalhe_viagem_selected"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:text="@string/botao_gastos_viagem"
                android:textColor="@color/colorPrimaryVariant"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLugaresVisitadosViagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:background="@drawable/button_detalhe_viagem_unselected"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:text="@string/botao_lugares_visitados"
                android:textColor="@color/white" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_detalhes_viagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_filters_viagem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
